--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "sales_buzzer",
-  "version": "1.0.0",
+  "name": "startup_buzzer",
+  "version": "0.0.0",
   "description": "",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "nodemon --trace-warnings src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Felipe Carlos Werlang",
@@ -12,8 +12,11 @@
     "body-parser": "^1.18.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
-    "play-sound": "^1.1.1",
+    "play-sound": "^1.1.2",
     "request": "^2.80.0",
     "rxjs": "^5.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.2"
   }
 }
