--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "body-parser": "^1.18.1",
     "dotenv": "^4.0.0",
-    "ejs": "^2.5.7",
     "express": "^4.15.2",
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
+    "passport-http-bearer": "^1.0.1",
     "play-sound": "^1.1.2",
     "request": "^2.80.0",
     "rxjs": "^5.5.0"
