--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "linkstate": "^1.1.1",
+    "mitt": "^1.1.3",
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
     "preact-router": "^2.5.7"
