--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "frontend",
-  "short_name": "frontend",
+  "name": "Startup Buzzer",
+  "short_name": "buzzer",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#fff",
-  "theme_color": "#673ab8",
+  "background_color": "#c8beb7ff",
+  "theme_color": "#008000",
   "icons": [
     {
       "src": "/assets/icons/android-chrome-192x192.png",
