--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
     "build": "preact build --dest ../public",
-    "serve": "preact build && preact serve",
+    "serve": "preact build --dest ../public && preact serve --dir ../public",
     "dev": "preact watch",
     "lint": "eslint src",
     "test": "jest ./tests"
@@ -23,11 +23,14 @@
     "identity-obj-proxy": "^3.0.0",
     "if-env": "^1.0.0",
     "jest": "^21.2.1",
+    "node-sass": "^4.8.3",
     "preact-cli": "^2.1.0",
-    "preact-render-spy": "^1.2.1"
+    "preact-render-spy": "^1.2.1",
+    "sass-loader": "^7.0.1"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bulma": "^0.7.1",
     "linkstate": "^1.1.1",
     "mitt": "^1.1.3",
     "preact": "^8.2.6",
