--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,9 @@
     "sass-loader": "^7.0.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.5",
+    "@fortawesome/fontawesome-free-brands": "^5.0.10",
+    "@fortawesome/react-fontawesome": "0.0.18",
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
     "linkstate": "^1.1.1",
