Create home page styling.

--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Startup Buzzer",
-  "short_name": "buzzer",
+  "short_name": "Startup Buzzer",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
