--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.5",
     "@fortawesome/fontawesome-free-brands": "^5.0.10",
+    "@fortawesome/fontawesome-free-solid": "^5.0.10",
     "@fortawesome/react-fontawesome": "0.0.18",
     "axios": "^0.18.0",
     "bulma": "^0.7.1",
