--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.1",
+    "boom": "^7.2.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
+    "express-validator": "^5.2.0",
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
     "passport-http-bearer": "^1.0.1",
