--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Felipe Carlos Werlang",
   "license": "ISC",
   "jest": {
+    "roots": [ "src", "tests" ],
     "collectCoverage": false,
     "collectCoverageFrom": [
       "**/*.{js}"
@@ -22,10 +23,10 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "express-validator": "^5.2.0",
+    "find-exec": "^1.0.0",
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
     "passport-http-bearer": "^1.0.1",
-    "play-sound": "^1.1.2",
     "request": "^2.80.0",
     "rxjs": "^5.5.0"
   },
