--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
       "src",
       "tests"
     ],
-    "collectCoverage": false,
+    "collectCoverage": true,
     "collectCoverageFrom": [
       "**/*.{js}"
     ]
