--- a/package.json
+++ b/package.json
@@ -15,24 +15,25 @@
       "src",
       "tests"
     ],
-    "collectCoverage": true,
+    "collectCoverage": false,
     "collectCoverageFrom": [
       "**/*.{js}"
     ]
   },
   "dependencies": {
-    "axios": "^0.18.0",
     "body-parser": "^1.18.1",
     "boom": "^7.2.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "express-validator": "^5.2.0",
     "find-exec": "^1.0.0",
+    "helmet": "^3.12.1",
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
     "passport-http-bearer": "^1.0.1",
     "request": "^2.80.0",
-    "rxjs": "^5.5.0"
+    "rxjs": "^5.5.0",
+    "verror": "^1.10.0"
   },
   "devDependencies": {
     "jest": "^22.4.3",
