--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "startup_buzzer",
-  "version": "0.0.0",
+  "version": "0.7.0",
   "description": "",
   "scripts": {
     "start": "nodemon --trace-warnings src/server.js",
@@ -21,7 +21,6 @@
     ]
   },
   "dependencies": {
-    "body-parser": "^1.18.1",
     "boom": "^7.2.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
@@ -32,8 +31,7 @@
     "passport-github": "^1.1.0",
     "passport-http-bearer": "^1.0.1",
     "request": "^2.80.0",
-    "rxjs": "^5.5.0",
-    "verror": "^1.10.0"
+    "rxjs": "^5.5.0"
   },
   "devDependencies": {
     "jest": "^22.4.3",
