--- a/public/push-manifest.json
+++ b/public/push-manifest.json
@@ -1,1 +1,1 @@
-{"/":{"style.16a77.css":{"type":"style","weight":1},"bundle.5c3f0.js":{"type":"script","weight":1}}}
+{"/":{"style.16a77.css":{"type":"style","weight":1},"bundle.89aa3.js":{"type":"script","weight":1}}}
