--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
     "passport-http-bearer": "^1.0.1",
-    "request": "^2.80.0",
-    "rxjs": "^5.5.0"
+    "request": "^2.80.0"
   },
   "devDependencies": {
     "jest": "^22.4.3",
